# few-shot-exemplar-utils

./: .gitignore  demo.py  pyproject.toml
dev/: scripts.py
docs/: README.md
few_shot_exemplars/: __init__.py  langchain.py  langchain_validator.py  mcp_server.py
tests/: test_exemplar_validator.py  test_langchain_builder.py
