[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "few-shot-exemplar-utils"
version = "0.1.0"
description = "Utilities for building and validating few-shot LLM prompts using exemplars"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
check-all = "dev.scripts:check_all"
fix-all = "dev.scripts:fix_all"

[tool.setuptools.packages.find]
include = ["few_shot_exemplars*", "dev*"]

[dependency-groups]
dev = [
    "langchain-openai>=0.1.0",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pylint>=3.3.8",
]

[tool.flake8]
ignore = "E501"

[tool.pylint.messages_control]
disable = ["C0301"]
